Fix clippy eyes

--- a/src/main.css
+++ b/src/main.css
@@ -241,7 +241,7 @@ img {
   height: 1rem;
   width: 1rem;
   font-size: 0.6rem;
-  line-height: 1rem;
+  line-height: 1.2rem;
   top: 0.5rem;
   background: var(--white);
   border-radius: 99rem;
